# vm-engine.m

./: .gitignore  gradle.properties  settings.gradle
.acside/editor/: openedFiles.json  openedFiles.json.bak
.github/workflows/: build-engine.yml
include/: vm_internal.h
jni/: Application.mk  art_vm.cpp  binder_vm.cpp  bufferqueue_vm.cpp  egl_bridge.cpp  romfs_vm.cpp  surface_vm.cpp  vfs_hook.cpp
jni/binder/: binder_rewriter.cpp
jni/bridge/: hook_bridge.h
vmeer-module/: build.gradle  consumer-rules.pro  proguard-rules.pro
vmeer-module/src/main/: AndroidManifest.xml
vmeer-module/src/main/assets/: init.vmeer.rc
vmeer-module/src/main/java/com/vmeer/io/: EngineLoader.java
vmeer-module/src/main/jni/: Android.mk  CMakeLists.txt  ams_runtime.cpp  art_vm.cpp  binder_engine.cpp  binder_vm.cpp  bufferqueue_vm.cpp  egl_bridge.cpp  egl_virtual_hook.cpp  pms_runtime.cpp  romfs_vm.cpp  sensor_engine.cpp  surface_vm.cpp  vfs_hook.cpp  vm_engine.cpp  vmeer_binder_guard.cpp  vmeer_context.cpp  vmeer_core.cpp  vmeer_db.cpp  vmeer_engine.cpp  vmeer_filesystem.cpp  vmeer_fuse_ops.cpp  vmeer_helper.cpp  vmeer_hw_bridge.cpp  vmeer_identity_manager.cpp  vmeer_jni.cpp  vmeer_jni_bridge.cpp  vmeer_main.cpp  vmeer_pms.cpp  vmeer_process_sandbox.cpp  vmeer_service_manager.cpp  vmeer_squashfs_bridge.cpp  vmeer_stealth.cpp  vmeer_system.cpp  vmeer_vfs.cpp  vmeer_zygote.cpp  vmeerd.cpp  wms_runtime.cpp
vmeer-module/src/main/jni/binder/: binder_rewriter.cpp
vmeer-module/src/main/jni/bridge/: hook_bridge.cpp
vmeer-module/src/main/jni/include/: ams_runtime.h  binder_engine.h  binder_vm.h  egl_bridge.h  pms_runtime.h  sensor_engine.h  surface_vm.h  vfs_hook.h  vm_internal.h  vmeer_aidl_table.h  vmeer_art_runtime.h  vmeer_context.h  vmeer_db.h  vmeer_helper.h  vmeer_pms.h  vmeer_stealth.h  vmeer_system.h  vmeer_vfs.h  vmeer_zygote.h  wms_runtime.h
vmeer-module/src/main/jni/include/fuse3/: fuse_config.h  libfuse_config.h
vmeer_output/include/: shadowhook.h
